--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sqlite3": "^4.0.8",
     "uri-js": "^4.2.2",
     "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "yaml" : "^1.6.0"
   }
 }
