Upgrade redis to a new version and dsiable affinity by default

--- a/charts/external-auth-server/values.yaml
+++ b/charts/external-auth-server/values.yaml
@@ -94,6 +94,7 @@ redis-ha:
   redisPassword:
   exporter:
     enabled: true
+  hardAntiAffinity: false # set to true in production environments
 
 # sample storeOpts when using redis-ha chart
 #storeOpts:
