--- a/charts/external-auth-server/values.yaml
+++ b/charts/external-auth-server/values.yaml
@@ -94,7 +94,7 @@ redis-ha:
   redisPassword:
   exporter:
     enabled: true
-  hardAntiAffinity: false # set to true in production environments
+  hardAntiAffinity: true # set to false for development environments with less than 3 nodes available
 
 # sample storeOpts when using redis-ha chart
 #storeOpts:
