add priorityClassName value in helm chart

--- a/charts/external-auth-server/values.yaml
+++ b/charts/external-auth-server/values.yaml
@@ -129,6 +129,10 @@ tolerations: []
 
 affinity: {}
 
+# Priority indicates the importance of a Pod relative to other Pods.
+# https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
+priorityClassName: ""
+
 securityContext:
   enabled: false
   fsGroup: 1001
