--- a/charts/external-auth-server/templates/deployment.yaml
+++ b/charts/external-auth-server/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         app.kubernetes.io/name: {{ include "external-auth-server.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
       {{- if .Values.podLabels }}
-      {{- toYaml .Values.podLabels | nindent 8 }}
+      {{- tpl (toYaml .Values.podLabels) $ | nindent 8 }}
       {{- end }}
       annotations:
         checksum/secret: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
