migrate to latest helm

--- a/charts/external-auth-server/templates/service.yaml
+++ b/charts/external-auth-server/templates/service.yaml
@@ -3,14 +3,7 @@ kind: Service
 metadata:
   name: {{ include "external-auth-server.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "external-auth-server.name" . }}
-    helm.sh/chart: {{ include "external-auth-server.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-  {{- with .Values.service.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- include "external-auth-server.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -23,5 +16,4 @@ spec:
       protocol: TCP
       name: grpc
   selector:
-    app.kubernetes.io/name: {{ include "external-auth-server.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "external-auth-server.selectorLabels" . | nindent 4 }}
