--- a/charts/external-auth-server/templates/secrets.yaml
+++ b/charts/external-auth-server/templates/secrets.yaml
@@ -3,10 +3,7 @@ kind: Secret
 metadata:
   name: {{ include "external-auth-server.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "external-auth-server.name" . }}
-    helm.sh/chart: {{ include "external-auth-server.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "external-auth-server.labels" . | nindent 4 }}
 type: Opaque
 data:
   config-token-sign-secret: {{ required "configTokenSignSecret is required" .Values.configTokenSignSecret | b64enc | quote }}
