--- a/charts/external-auth-server/templates/service.yaml
+++ b/charts/external-auth-server/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "external-auth-server.fullname" . }}
   labels:
     {{- include "external-auth-server.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
