--- a/charts/external-auth-server/values.yaml
+++ b/charts/external-auth-server/values.yaml
@@ -49,9 +49,20 @@ nodeExtraCaCerts:
 
 replicaCount: 1
 
-metrics:
+## Add support for Prometheus
+monitoring:
   enabled: true
-  port: 8080
+  serviceMonitor:
+    # When set true and if Prometheus Operator is installed then use a ServiceMonitor to configure scraping
+    enabled: true
+    # Set the namespace the ServiceMonitor should be deployed
+    # namespace: monitoring
+    # Set how frequently Prometheus should scrape
+    # interval: 30s
+    # Set path to beats-exporter telemtery-path
+    # telemetryPath: /metrics
+    # Set labels for the ServiceMonitor, use this to define your scrape label for Prometheus Operator
+    # labels:
 
 image:
   repository: travisghansen/external-auth-server
@@ -144,6 +155,10 @@ affinity: {}
 # Additional pod labels
 # https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: {}
+
+# Additional pod annotations
+# https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
+podAnnotations: {}
 
 # Priority indicates the importance of a Pod relative to other Pods.
 # https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
