--- a/charts/external-auth-server/templates/secrets.yaml
+++ b/charts/external-auth-server/templates/secrets.yaml
@@ -8,7 +8,7 @@ type: Opaque
 data:
   config-token-sign-secret: {{ required "configTokenSignSecret is required" .Values.configTokenSignSecret | b64enc | quote }}
   config-token-encrypt-secret: {{ required "configTokenEncryptSecret is required" .Values.configTokenEncryptSecret | b64enc | quote }}
-  encrypt-iv-secret: {{ .Values.encryptIvSecret | b64enc | quote }}
+  encrypt-iv-secret: {{ .Values.configTokenEncryptIVSecret | b64enc | quote }}
   issuer-sign-secret: {{ required "issuerSignSecret is required" .Values.issuerSignSecret | b64enc | quote }}
   issuer-encrypt-secret: {{ required "issuerEncryptSecret is required" .Values.issuerEncryptSecret | b64enc | quote }}
   cookie-sign-secret: {{ required "cookieSignSecret is required" .Values.cookieSignSecret | b64enc | quote }}
