--- a/charts/external-auth-server/values.yaml
+++ b/charts/external-auth-server/values.yaml
@@ -4,7 +4,7 @@
 
 configTokenSignSecret:
 configTokenEncryptSecret:
-encryptIvSecret:
+configTokenEncryptIVSecret:
 issuerSignSecret:
 issuerEncryptSecret:
 cookieSignSecret:
