--- a/charts/external-auth-server/templates/secrets.yaml
+++ b/charts/external-auth-server/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if (not .Values.useExistingSecret) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -25,4 +26,4 @@ data:
   {{- if .Values.backchannelLogoutConfig }}
   backchannel-logout-config: {{ .Values.backchannelLogoutConfig | toJson | b64enc | quote }}
   {{- end }}
-
+{{- end }}
